# basestation3

./: .gitattributes  .gitignore  Ai2SGgun.mat  Ai5SGgun.mat  Base.py  BaseCtrlFiles.py  BaseDB.py  BaseDotFiles.py  BaseGZip.py  BaseLog.py  BaseLogin.py  BaseMagCal.py  BaseNetCDF.py  BaseNetwork.py  BaseOptionsType.py  BaseOpts.py  BaseOptsType.py  BaseParquet.py  BasePlot.py  BaseRunner.py  BaseTime.py  BaseType.py  BimSGgun.mat  Bogue.py  CHANGELOG.md  CONTRIBUTING.md  CTDAdjustment.py  CalibConst.py  CalibConstCheck.py  CmdHistory.py  CommLog.py  Commission.py  Const.py  Daemon.py  DataFiles.py  Dockerfile  ExtractTimeseries.py  FTPPush.py  FileMgr.py  FlightModel.py  (+81 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: action.yml  mattermost.yml
Plotting/: DiveCOG.py  DiveCTD.py  DiveCTDCorrections.py  DiveCTW.py  DiveCoda.py  DiveCompassCompare.py  DiveLegatoCorrections.py  DiveLegatoData.py  DiveLegatoPressure.py  DiveMagCal.py  DiveOCR504i.py  DiveOptode.py  DivePMAR.py  DivePitchRoll.py  DivePlot.py  DiveSBE43.py  DiveScience.py  DiveTMICL.py  DiveTS.py  DiveTridente.py  DiveVertVelocity.py  DiveVertVelocityNew.py  DiveWetlabs.py  DiveWkbSchedule.py  MissionCallStats.py  MissionCommLog.py  MissionDepthAngle.py  MissionDisk.py  MissionEnergy.py  MissionIntPressRH.py  MissionIntSensors.py  MissionMap.py  MissionMotors.py  MissionPMAR.py  MissionProfiles.py  MissionVolume.py  __init__.py
Sensors/: .sensors  Makefile  WETlabs_ext.py  aa3830_ext.py  aa4330_ext.py  aa4831b.cnf  ad2cp.cnf  ad2cpMAT.c  coda_ext.py  cp_ext.py  echo.cnf  fet_ext.py  irrad.cnf  legato_ext.py  legato_logdev_ext.py  mag.cnf  microriderg_logdev_ext.py  ocr504i.cnf  ocr504i_scicon.cnf  payload_ext.py  pmar_ext.py  qsp2150.cnf  riot_ext.py  rockland_micropod_ext.py  sailct_ext.py  sat1000.cnf  sbe43_ext.py  sbect_ext.py  sc2mat.c  scct.cnf  scicon_ext.py  suna_ext.py  tmicl_ext.py  tridente_ext.py  velo_ext.py
config/: divescience.yml
ctd_sampling/: .gitignore  Makefile  Readme.md  pyproject.toml
ctd_sampling/.claude/: CLAUDE.md
ctd_sampling/src/: PLAN.md
ctd_sampling/src/ctd_sampling/: __init__.py  binning.py  buoyancy.py  cli.py  io.py  plotting.py  smoothing.py  wkb.py
ctd_sampling/tests/: test_binning.py  test_buoyancy.py  test_cli.py  test_smoothing.py  test_wkb.py
ctd_sampling/tests/fixtures/: p1670093.nc  p1670094.nc  p1670095.nc  p1670096.nc  p1670097.nc
docs/: Basestation.tex  Docs.md  NODC.txt  SGDataProcessing.txt  Seaglider_Quality_Control_Manual.html  missions.yml  plotting.md  schema  sections.yml  sensor_integration.md  tridente.md  vis.txt  whole_mission.yml
docs/dev/: CheckIn.md
docs/gliderdac/: gliderdac.md  project.yml  seaglider.yml  sgXXX.conf  sgXXX.yml
html/: AlertsReferenceManual.html  Parameter_Reference_Manual.html  admin.html  ballast.html  chat.html  dialogs.html  epdos_Reference_Manual.html  help.html  index.html  login.html  map.html  pos.html  setup.html  vis.html  wrap.html
html/plothelp/: dv_codatodo.html  dv_cog.html  dv_compass_compare.html  dv_ctd.html  dv_ctd_corrections.html  dv_ctd_series.html  dv_ctw.html  dv_diveplot.html  dv_legato.html  dv_legato_pressure.html  dv_magcal.html  dv_ocr504i.html  dv_optode.html  dv_pitch.html  dv_pmar.html  dv_pmar_logavg_spectra.html  dv_roll.html  dv_roll_rate.html  dv_sbe43.html  dv_tmicl_logavg.html  dv_tmicl_signal_mean_variance.html  dv_tridente_backscatter.html  dv_tridente_fluor.html  dv_ts.html  dv_vert_vel.html  dv_vert_vel_new.html  dv_vert_vel_regression.html  dv_wetlabs_backscatter.html  dv_wetlabs_fluor.html  dv_wkb_buoyfreq.html  dv_wkb_schedule.html  eng_FM_ab_dives.html  eng_FM_abs_compress.html  eng_FM_vbdbias.html  eng_commlog.html  eng_depth_angle.html  eng_disk.html  eng_download_stats.html  eng_int_sensors.html  eng_mission_energy.html  (+8 more)
jail/: ReadMe.md  create_jail.py
login_logout_scripts/: check_base3  glider_login  glider_logout  switch_glider_login  switch_glider_logout
mkdocs/: index.md  reference.md
rawxfer/: Makefile  crc.c  md5.c  md5.h  rawrcv.c  rawsend.c  rsyslog.c
scripts/: Control.Coordinates.css  Control.Coordinates.js  L.KML.js  annunciate.css  annunciate.js  base.css  beep.js  bell.js  chat.css  chat.js  chime.js  colormaps.js  dialogs.css  dialogs.js  easy-button.css  easy-button.js  leaflet-grids.js  leaflet-ruler.css  leaflet-ruler.js  leaflet-slider.css  leaflet-slider.js  leaflet-svg-shape-markers.js  leaflet-svg-shape-markers.min.js  leaflet.js  loader.css  login.css  login.js  manifest.json  ping.js  plottool.css  spincontrol.css  spincontrol.js  tabstats.js  util.js  websocket.js
sg000/: .cshrc  .extensions  .ftp  .ftps  .login  .logout  .mailer  .pagers  .pre_extensions  .sftp  .urls  NODC.cnf  NODC.yml  cmdfile  divescience.yml  files_to_skip.txt  pagers.yml  sections.yml  sg000.conf  sg_calib_constants.m  sg_plot_constants.m
testdata/: .gitignore
testdata/sg171_EKAMSAT_Apr24/: p1710101.nc  p1710102.nc  p1710103.nc  p1710104.nc  p1710105.nc  p1710106.nc  p1710107.nc  p1710108.nc  p1710109.nc
tests/: echo_err.sh  loop_infinite.sh  test_Base.py  test_BaseADCP.py  test_BaseADCPMission.py  test_BaseDotFiles.py  test_BaseHooks.py  test_BasePlot.py  test_CTDAdjustment.py  test_CalibConstCheck.py  test_FTPPush.py  test_FlightModelCLI.py  test_FlightModel_plots.py  test_LowLevelCLI.py  test_MagCal.py  test_MakeDiveProfiles.py  test_MakeMissionProfile.py  test_MakeMissionTimeSeries.py  test_MakePlotTSProfile.py  test_MoveData.py  test_PlotHelp.py  test_Reprocess.py  test_SimplePlotExtension.py  test_Utils.py  test_WkbConfigText.py  test_pressure_smoothing.py  test_system_dependencies.py  test_tools.py  testutils.py
tools/: ArrivalTime.py  CorrectSciconTime.py  ExtraTargetsAlongLine.py  GetActiveMissions.py  GetCodaMeta.py  GetLegatoPressCorr.py  GetOptodeConstants.py  GetTridenteChannels.py  PlotBathy.py  SectionTimes.py  convert_from_cfcard.py  convert_from_sdcard.py  socat@.service  sync.bash
tsv_mat/: Ai1SGgun.mat  Ai3SGgun.mat  Ai4SGgun.mat  BemSGgun.mat  Tau1SGgun.mat  Tau2SGgun.mat  Tau4SGgun.mat  Tau5SGgun.mat
(+302 files in other folders)
