[project]
name = "basestation3"
version = "3.0.6"
description = "Seaglider shore side processing"
readme = "Readme.md"
requires-python = "==3.10.19"
dependencies = [
    # For Plotly persistence
    "kaleido==0.2.1", #; platform_machine != 'armv7l'
    "plotly==5.24.1",
    # To upgrade to newer plotly, kaleido 1.0 is needed, which requires a separate install of chrome
    # for generating webp.  The implications on a headless system still need to be sorted out
    # kaleido==1.0.0
    # plotly==6.3.0
    "brotlipy",
    "matplotlib>=3.6.0",
    "cmocean==4.0.3",
    "numpy==1.26.4",
    "gsw==3.6.19",
    "pyarrow==21.0.0",
    "seawater==3.3.4",
    "scipy==1.14.1",
    # latest cartopy crashes when shapely is not built from source
    #shapely --no-binary shapely
    #cartopy
    # No crashes seen with these versions - leaving the above in place
    # until further testing says we don't need to install from source
    "shapely==2.0.6",
    "cartopy==0.24.1",
    "PyYAML==6.0.2",
    # For SlackPost and InReachSend
    "requests>=2.31.0",
    # For GliderDAC and BaseNetwork support
    "xarray==2024.10.0",
    "netCDF4==1.7.2",
    # For sftp support in BaseDotFiles
    "paramiko>=2.10.4",
    # For BaseRunner
    "inotify_simple",
    "sdnotify",
    # For create_jail
    "pylddwrap",
    # For visualization
    "parse",
    "sanic",
    "sanic_gzip",
    "aiohttp",
    "jinja2",
    "sanic_ext",
    "uuid",
    "passlib",
    "PyJWT",
    "aiosqlite",
    "orjson",
    "anyio",
    "pyzmq==26.3.0",
    "ppigrf==2.1.0",
    "scanf",
    "pyproj==3.7.0",
    "pydantic==2.9.2",
    "asyncudp",
    "asyncinotify",
    "PyQRCode==1.2.1",
    "json2html==1.3.0",
    "websockets==14.1",
    # To match the adcp requirements
    "h5py==3.12.1",
]
[project.optional-dependencies]
ci = [
   ## Testing
   "pytest==8.3.3",
   "pytest-cov==6.0.0",
   ## Linting
   "ruff==0.7.2",
   ## Static Typing
   "mypy==1.13.0",
   "types-PyYAML",
   "ty==0.0.7", ## Latest
]
dev = [
    ## Documentation (fill in)
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "ipython",
    "flynt",
    "notebook==7.4.4",
    "jupyterlab==4.4.5",
    "flameprof==0.4"
]


[tool.mypy]
plugins = ['numpy.typing.mypy_plugin', 'pydantic.mypy']
files = ['Base.py', 'MakeDiveProfiles.py', "Reprocess.py"]
#strict = true
python_version = "3.10"

# # Much of the numerical computing stack doesn't have type annotations yet.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "gsw.*",
    "seawater.*",
    "netCDF4.*",
    "scipy.*",
    "xarray.*",
    "matplotlib.*",
    "scanf.*",
    "shapely.*",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
# Turn this on and do a pass through the code base
#line-length = 120
output-format = 'pylint'
include = ["./*py", "tests/*py"]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Numpy 2.0 compat
    #"NPY201"
]
# Note: when migrating to numpy2.0, grep for NPY201 for locations that need updating
ignore = [
  # line too long - revisit after format pass to 120 columns
  "E501",
  # Module level import not at top of file
  # For now - tag locations with # noqa: E402
  #"E402",
  # Use format specifiers instead of percent format
  # Quite a few cases where this does not improve readability
  "UP031",
  # redundant-open-modes
  "UP015",
  # Use ternary operator
  # Does not generally improve readability
  "SIM108",
  # Use a context manager for opening files
  # TODO - at some point, do the rewrite/targetting ignore for these
  "SIM115",
]
[tool.coverage.html]
directory = "coverage_html_report"
[tool.coverage.run]
omit = [
    "adcp/*",
    "local/*",
    "microstructure/*",
    "Plotting/local/*",
    ]

[tool.ty.rules]
# Primarly for BaseOpts class
# TODO - see if this can be scoped to just that class in future releases
unresolved-attribute = "ignore"