[project]
name = "ctd_sampling"
version = "0.0.1"
description = "WKB-stretched CTD sampling schedule design for Seagliders"
readme = "Readme.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "numpy==2.5.0",
    "gsw==3.6.19",
    "plotly==6.8.0",
    "scipy==1.18.0",
    "isodate==0.7.2",
    "cmocean==4.0.3",
    "pyyaml==6.0.2",
    "xarray==2026.4.0",
    "netCDF4==1.7.4",
    "pydantic==2.13.4",
]

[project.scripts]
ctd-sampling = "ctd_sampling.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctd_sampling"]
[project.optional-dependencies]
ci = [
    ## Testing
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    ## Linting
    "ruff==0.15.17",
    ## Static Typing
    "ty==0.0.32",
    "types-PyYAML",
]
dev = [
    "mkdocs==1.6.1",
    "markdown-include==0.8.1",
    "mkdocstrings[python]==0.27.0",
    "mkdocs-material==9.5.46",
    ## Misc
    "ipython",
    "flynt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
output-format = 'pylint'
include = ["src/**/*py", "tests/*py"]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Numpy2.0 compat
    "NPY201",
    # Docstrings - not yet
    "D",
    # Full annotations - not yet
    "ANN",
    # Require pathlib
    "PTH",
]
ignore = [
  # redundant-open-modes
  "UP015",
  # Use ternary operator
  "SIM108",
]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/config/*"
]

[tool.coverage.report]
show_missing = true
fail_under = 85